--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
     implementation 'com.firebase:geofire-android:2.1.2'
 
-    implementation 'com.github.glomadrian:MaterialAnimatedSwitch:1.1@aar'
+    //implementation 'com.github.glomadrian:MaterialAnimatedSwitch:1.1@aar'
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
